Initial commit with personal dotfiles
This is my inital commit with all my dotfile tweaks

--- a/bindings/.config/hypr/bindings.conf
+++ b/bindings/.config/hypr/bindings.conf
@@ -24,5 +24,12 @@ bindd = SUPER SHIFT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "G
 #Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER SHIFT, SPACE
 # bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
+#unbind = SUPER k
+# Unsure what to bind for hotkey menu bindd = SUPER SHIFT, K,
+#bind = SUPER, h, movefocus, l
+#bind = SUPER, j, movefocus, d
+#bind = SUPER, k, movefocus, u
+#bind = SUPER, l, movefocus, r
+
 
 #NOTE: KEY BINDINGS FOR WORKSTATION ARE ON MONITOR CONFIG
