--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,12 +4,15 @@ bind r source-file ~/.tmux.conf
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+#Sets Leader key to control S
 set -g prefix C-s
 
+#enables resizing with mouse
 set -g mouse on
 
 set-window-option -g mode-keys vi
 
+#changes bindings to move panes with nvim keys
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
@@ -17,7 +20,7 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
-# set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
 # List of plugins
