added background, omarchy dotfile update
added background file and omarchy updated making minor changes to dot
files

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -35,3 +35,6 @@ shell-integration-features = ssh-env
 #custom-shader = /home/chris/crt.glsl
 
 
+
+# Slowdown mouse scrolling
+mouse-scroll-multiplier = 0.95
